CAP - package name should always be lowercase.
Signed-off-by: Carlo Dandan <carlodandan.personal@proton.me>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Company-Admin-Pro",
+  "name": "company-admin-pro",
   "productName": "Company Admin Pro",
   "version": "1.0.0",
   "description": "Company Administration System Application",
