--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "crypto": "^1.0.1",
     "electron-squirrel-startup": "^1.0.1",
