--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development
+.env.production
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
