--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.39.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -37,6 +38,7 @@
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "crypto": "^1.0.1",
+    "dotenv": "^17.3.1",
     "electron-squirrel-startup": "^1.0.1",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
