--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Supabase Configuration
 SUPABASE_URL=<add_your_supabase_project_url>
-SUPABASE_KEY=<add_your_supabase_service_role_key>
+SUPABASE_ANON_KEY=<add_your_supabase_anon_key>
