--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Supabase Configuration
-SUPABASE_URL=<add_your_supabase_project_url>
-SUPABASE_ANON_KEY=<add_your_supabase_anon_key>
+VITE_SUPABASE_URL=<add_your_supabase_project_url>
+VITE_SUPABASE_ANON_KEY=<add_your_supabase_anon_key> # This is actually safe to in browser, if using supabase auth.
