--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
       # 5. Build the application (electron-forge publish)
       - name: Build
         env:
-          VITE_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
         run: pnpm run make
 
       # 6. Set Other Variables
@@ -50,8 +50,8 @@ jobs:
           echo "APP_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
           echo "VITE_VER=$(jq -r '.devDependencies.vite' package.json)" >> $GITHUB_ENV
           echo "ELECTRON_VER=$(jq -r '.devDependencies.electron' package.json)" >> $GITHUB_ENV
-          echo "REACT_VER=$(jq -r '.devDependencies.react' package.json)" >> $GITHUB_ENV
-          echo "TAILWIND_VER=$(jq -r '.devDependencies.tailwindcss' package.json)" >> $GITHUB_ENV
+          echo "REACT_VER=$(jq -r '.Dependencies.react' package.json)" >> $GITHUB_ENV
+          echo "TAILWIND_VER=$(jq -r '.Dependencies.tailwindcss' package.json)" >> $GITHUB_ENV
 
       # 7. Upload the Build
       - name: Upload to Release (Admin Pro)
